...
            android:layout_height="match_parent"
            android:orientation="vertical">



                <TextView
                    android:id="@+id/privacy_heading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:accessibilityHeading="true"
                    android:fontFamily="sans-serif-black"
...

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/contact_heading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:accessibilityHeading="true"
                    android:fontFamily="sans-serif-black"
                    android:gravity="center_horizontal"
                    android:text="@string/contact_information"
                    android:textColor="?colorOnPrimary"
                    android:textSize="24sp" />
                <TextView
                    android:id="@+id/name_heading"
                    android:layout_width="wrap_content"
                    android:accessibilityHeading="true"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="30dp"
                    android:textStyle="bold"
...
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/petra_ritter"
                    android:textColor="?colorOnPrimary"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/email_heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:accessibilityHeading="true"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/email"
                    android:textColor="?colorOnPrimary"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView_mail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:autoLink="email"
                    android:focusable="true"
...
                    android:textColorLink="?colorPrimary"
                    android:textSize="20sp"
                   />


                <TextView
                    android:id="@+id/website_heading"
                    android:layout_width="wrap_content"
                    android:accessibilityHeading="true"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/website"
                    android:textColor="?colorOnPrimary"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView_website_url"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:autoLink="web"
                    android:focusable="true"
...
