...
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:id="@+id/about_heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="20dp"
                android:accessibilityHeading="true"
...
                android:text="@string/about_the_app"
                android:textColor="?colorOnPrimary"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/app_name_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:accessibilityHeading="true"
                android:fontFamily="sans-serif-medium"
...
                android:layout_marginTop="5dp"
                android:fontFamily="sans-serif-medium"
                android:textColor="?colorOnPrimary"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/app_vers_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="50dp"
                android:accessibilityHeading="true"
                android:fontFamily="sans-serif-medium"
...
                android:layout_marginTop="5dp"
                android:fontFamily="sans-serif-medium"
                android:textColor="?colorOnPrimary"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/build_no_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="50dp"
                android:accessibilityHeading="true"
                android:fontFamily="sans-serif-medium"
...
                android:layout_marginTop="5dp"
                android:fontFamily="sans-serif-medium"
                android:textColor="?colorOnPrimary"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/git_hub_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="50dp"
                android:accessibilityHeading="true"
                android:fontFamily="sans-serif-medium"
                android:text="@string/github"
                android:textColor="?colorOnPrimary"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_GitHup_url"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:autoLink="web"
                android:focusable="true"
...
