...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:accessibilityHeading="true"
...
                android:fontFamily="sans-serif-medium"
                android:text="@string/alt_description"
                android:textColor="?colorOnPrimary"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:accessibilityHeading="true"
...
                android:id="@+id/imageView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_not_accessible_foreground" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:accessibilityHeading="true"
...
                android:layout_height="wrap_content"
                android:contentDescription="@null"
                android:src="@drawable/ic_accessible_foreground" />

            <TextView

                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:accessibilityHeading="true"
...
                android:fontFamily="sans-serif-medium"
                android:text="@string/informative_graphic_description"
                android:textColor="?colorOnPrimary"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:contentDescription="@string/informative_graphic_alt"
                android:src="@drawable/ic_accessible_foreground" />
        </LinearLayout>
...
